--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,113 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow&family=Roboto+Slab:wght@700&family=Rubik:ital,wght@0,500;1,400&family=Spectral&display=swap");
+
+*,
+::after,
+::backdrop {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Archivo Narrow", sans-serif;
+  font-family: "Roboto Slab", serif;
+  font-family: "Rubik", sans-serif;
+  font-family: "Spectral", serif;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  min-height: 100vh;
+  padding: 3rem;
+  background-image: url(background.jpg);
+}
+
+.main {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 80vh;
+  min-width: 95vw;
+  border-radius: 10px;
+  background-color: #7a3ec6;
+}
+
+.formbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  min-height: 60vh;
+  min-width: 35vw;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+.infobox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 60vh;
+  min-width: 55vw;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+.input {
+  border: 3px solid #7a3ec6;
+  border-radius: 10px;
+  min-width: 25vw;
+  min-height: 5vh;
+  padding: 1rem;
+  font-size: 1.5rem;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.btn {
+  border: none;
+  padding: 1rem 4rem 1rem 4rem;
+  background-color: #7a3ec6;
+  color: #fff;
+  font-size: 1.5rem;
+  letter-spacing: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  transform: scale(1.1);
+  transition: all 0.2s ease-in;
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 50vw;
+}
+
+.info-container p {
+  font-size: 1.25rem;
+  background-color: #7a3ec6;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-weight: 700;
+  color: #fff;
+}
+
+
+.loader {
+  font-size: 1.25rem;
+  background-color: #7a3ec6;
+  padding: 0.5rem;
+  border-radius: 10px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.localtime {
+  font-size: 1.5rem;
 }
